# AgentTheo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RULES.md  TODO.md  check_migration.py  docker-entrypoint.sh  entrypoint.py  fix-summary.md  main.py  models.json  quick_setup.sh  rebuild_and_test.sh  requirements.txt  run.sh  test-resize-debug.html  test-resize.html  webui-test-summary.md
agent/: __init__.py  browser_tools.py  llm_client.py  logger.py  main.py  main_langgraph.py  openrouter_chat.py  task_executor.py
agent-theo/: pyproject.toml
agent-theo/src/theo/: __init__.py  config.py
agent-theo/src/theo/agent/: __init__.py  graph.py  prompts.py  state.py
agent-theo/src/theo/container/: __init__.py  manager.py
agent-theo/src/theo/tools/: __init__.py  base.py  files.py  shell.py
agent-theo/src/theo/tui/: __init__.py  app.py
agent-theo/src/theo/tui/screens/: __init__.py  main.py
agent-theo/src/theo/tui/widgets/: __init__.py  conversation.py  input.py  reasoning.py
agent-theo/tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_container.py  test_integration.py  test_tools.py  test_tui.py
config/: .env.template
docker/: .dockerignore.optimized  Dockerfile  debug-entrypoint.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  migrate-to-optimized.sh  supervisord.conf
docs/: ARCHITECTURE.md  BROWSER_ENHANCEMENT_PLAN.md  BROWSER_TOOLS_JS.md  CONTAINER_FIX.md  CUSTOM_TOOLS.md  DESKTOP_ONLY_CHANGES.md  DOCKER_OPTIMIZATIONS.md  DOM_ANALYSIS_TOOLS.md  IMPLEMENTATION_GUIDE.md  test-resize-fix.md  (+8 more)
(+78 files in other folders)
